fixing mini quiz

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
     </div>
 
     <div class="mini-quiz-grid">
-        <div class="mini-quiz-card" data-quiz="whats-your-why">
+<div class="mini-quiz-card" data-quiz="your-financial-why">
             <div class="quiz-selection-checkbox"></div>
             <div class="quiz-card-header">
                 <span class="quiz-card-icon">🔹</span>
@@ -462,7 +462,7 @@
             <span class="question-count-badge">5 Questions → Personalized Budget Priorities</span>
         </div>
 
-        <div class="mini-quiz-card" data-quiz="how-you-handle-life">
+        <div class="mini-quiz-card" data-quiz="your-stress-decision-style">
             <div class="quiz-selection-checkbox"></div>
             <div class="quiz-card-header">
                 <span class="quiz-card-icon">🔹</span>
@@ -484,7 +484,7 @@
             <span class="question-count-badge">5 Questions → Custom Budgeting Approach</span>
         </div>
 
-        <div class="mini-quiz-card" data-quiz="how-you-live">
+<div class="mini-quiz-card" data-quiz="your-daily-rhythm">
             <div class="quiz-selection-checkbox"></div>
             <div class="quiz-card-header">
                 <span class="quiz-card-icon">🔹</span>
