--- a/financial-why-quiz.html
+++ b/financial-why-quiz.html
@@ -166,6 +166,14 @@
                 </div>
             </div>
 
+            <div class="navigation">
+                <button class="btn btn-secondary" id="prevBtn" onclick="previousSection()" style="display: none;">Previous</button>
+                <button class="btn btn-primary" id="nextBtn" onclick="nextSection()">Next</button>
+                <button class="btn btn-primary" id="submitBtn" onclick="calculateResults()" style="display: none;">Get My Results</button>
+            </div>
+        </div>
+    </div>
+
     <script src="js/financial-why-quiz.js"></script>
 </body>
 </html>
