--- a/financial-why-quiz.html
+++ b/financial-why-quiz.html
@@ -161,7 +161,7 @@
                     <!-- Insights will be populated by JavaScript -->
                 </div>
                 <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap; margin-top: 20px;">
-                    <button class="btn btn-primary" onclick="window.location.href='index.html'">Back to Main Quiz</button>
+                    <button class="btn btn-primary" onclick="window.location.href='index.html'">Back to Quiz Menu</button>
                     <button class="btn btn-secondary" onclick="window.location.href='stress-decision-quiz.html'">Next Mini Quiz</button>
                 </div>
             </div>
