--- a/index.html
+++ b/index.html
@@ -449,113 +449,14 @@
                         
                         <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap; margin-top: 15px;">
                             <button type="submit" class="btn btn-primary">Submit Feedback</button>
-                            <button type="button" class="btn btn-primary" onclick="showPersonalization()">
-                                Continue to Mini Quizzes
-                            </button>
                         </div>
                     </form>
                 </div>
             </div>
 
                 <!-- Mini Quiz Personalization Section -->
-<div class="personalization-section" id="personalizationSection">
-    <div class="personalization-header">
-        <h3>💡 Get Your Personal Budget Strategy</h3>
-        <p>Now that we know your financial personality, let's dive deeper to create a budgeting approach that actually works for <em>you</em>.</p>
-    </div>
-
-    <div class="personalization-intro">
-        <h4>🎯 Why One-Size-Fits-All Budgets Fail</h4>
-        <p>Your money habits are shaped by your values, stress responses, and lifestyle. These mini quizzes will help us build a budgeting system that fits how you actually live, not how you think you should live.</p>
-    </div>
-
-    <div class="mini-quiz-grid">
-<div class="mini-quiz-card" data-quiz="your-financial-why">
-            <div class="quiz-selection-checkbox"></div>
-            <div class="quiz-card-header">
-                <span class="quiz-card-icon">🔹</span>
-                <span class="quiz-card-title">What's Your Why?</span>
-            </div>
-            <div class="quiz-card-subtitle">💬 Discover the deeper reason behind how you spend, save, and plan.</div>
-            <div class="quiz-card-description">
-                Your core values and motivations shape every financial decision you make. When we understand what truly drives you, we can create budget categories and financial goals that feel meaningful instead of restrictive.
-            </div>
-            <div class="quiz-card-preview">
-                <div class="preview-question">Sample: "What drives your financial choices more than anything?"</div>
-                <div class="preview-options">
-                    • Creating peace of mind and stability<br>
-                    • Having the freedom to make life decisions<br>
-                    • Supporting people and causes you care about<br>
-                    • Achieving goals and building something meaningful
-                </div>
-            </div>
-            <span class="question-count-badge">5 Questions → Personalized Budget Priorities</span>
-        </div>
-
-        <div class="mini-quiz-card" data-quiz="your-stress-decision-style">
-            <div class="quiz-selection-checkbox"></div>
-            <div class="quiz-card-header">
-                <span class="quiz-card-icon">🔹</span>
-                <span class="quiz-card-title">Your Stress & Decision Style</span>
-            </div>
-            <div class="quiz-card-subtitle">💬 Understand how you respond to change, decisions, and emotional stress.</div>
-            <div class="quiz-card-description">
-                Your natural patterns for handling stress and making decisions directly impact your money habits. We'll design budgeting tools and alerts that work with your personality, not against it.
-            </div>
-            <div class="quiz-card-preview">
-                <div class="preview-question">Sample: "How do you usually approach big life changes?"</div>
-                <div class="preview-options">
-                    • I plan ahead and stay steady<br>
-                    • I trust my gut and adapt as I go<br>
-                    • I reach out to my people and talk it through<br>
-                    • I reflect, regroup, and figure it out over time
-                </div>
-            </div>
-            <span class="question-count-badge">5 Questions → Custom Budgeting Approach</span>
-        </div>
-
-<div class="mini-quiz-card" data-quiz="your-daily-rhythm">
-            <div class="quiz-selection-checkbox"></div>
-            <div class="quiz-card-header">
-                <span class="quiz-card-icon">🔹</span>
-                <span class="quiz-card-title">Your Daily Rhythm</span>
-            </div>
-            <div class="quiz-card-subtitle">💬 Explore the energy, relationships, and values that shape your daily life.</div>
-            <div class="quiz-card-description">
-                Your lifestyle, relationships, and daily routines all influence where your money goes. Understanding these patterns helps us create spending categories that reflect your real life, not an idealized version.
-            </div>
-            <div class="quiz-card-preview">
-                <div class="preview-question">Sample: "How do you prefer to recharge or unwind?"</div>
-                <div class="preview-options">
-                    • Quiet time with a plan or book<br>
-                    • Doing something spontaneous or creative<br>
-                    • Spending time with people I love<br>
-                    • Moving my body or doing something active
-                </div>
-            </div>
-            <span class="question-count-badge">5 Questions → Realistic Spending Categories</span>
-        </div>
-    </div>
-
-    <div class="selection-controls">
-        <button class="control-btn" id="selectAllQuizzes">Select All Quizzes</button>
-        <button class="control-btn" id="clearAllQuizzes">Clear Selection</button>
-    </div>
-
-    <div class="personalization-actions">
-        <div class="selection-summary">
-            You've selected <span class="selected-count" id="selectedQuizCount">0</span> mini quiz(es)
-        </div>
-        
-        <div class="personalization-buttons">
-            <button class="btn-personalization btn-personalization-primary" id="startMiniQuizzes" disabled>
-                🚀 Start My Mini Quizzes
-            </button>
-            <button class="btn-personalization btn-personalization-secondary" id="skipPersonalization">
-                Maybe Later
-            </button>
-        </div>
-    </div>
+<div style="text-align: center; margin-top: 30px;">
+    <button class="btn btn-primary" onclick="window.location.href='index.html'">Back to Quiz Menu</button>
 </div>
 
             <div class="navigation">
